turn on statun ..

--- a/V2rayU/Info.plist
+++ b/V2rayU/Info.plist
@@ -29,7 +29,7 @@
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2018 yanue. All rights reserved.</string>
 	<key>NSMainNibFile</key>
-	<string>Menu</string>
+	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
 	<key>SUFeedURL</key>
