--- a/V2rayU/Info.plist
+++ b/V2rayU/Info.plist
@@ -17,9 +17,9 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
+	<string>0.9</string>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>20181122002</string>
 	<key>LSApplicationCategoryType</key>
 	<string>public.app-category.utilities</string>
 	<key>LSMinimumSystemVersion</key>
@@ -34,5 +34,7 @@
 	<string>NSApplication</string>
 	<key>SUFeedURL</key>
 	<string>https://raw.githubusercontent.com/yanue/V2rayU/master/appcast.xml</string>
+	<key>SUPublicEDKey</key>
+	<string>dsa_pub.pem</string>
 </dict>
 </plist>
