--- a/V2rayU/Info.plist
+++ b/V2rayU/Info.plist
@@ -17,9 +17,24 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0.1</string>
+	<string>1.0.2</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Viewer</string>
+			<key>CFBundleURLName</key>
+			<string>net.yanue.V2rayU</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>vmess</string>
+				<string>ss</string>
+				<string>ssr</string>
+			</array>
+		</dict>
+	</array>
 	<key>CFBundleVersion</key>
-	<string>1.0.1</string>
+	<string>1.0.2</string>
 	<key>LSApplicationCategoryType</key>
 	<string>public.app-category.utilities</string>
 	<key>LSMinimumSystemVersion</key>
@@ -32,22 +47,9 @@
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
-    <key>CFBundleURLTypes</key>
-    <array>
-        <dict>
-            <key>CFBundleTypeRole</key>
-            <string>Viewer</string>
-            <key>CFBundleURLName</key>
-            <string>net.yanue.V2rayU</string>
-            <key>CFBundleURLSchemes</key>
-            <array>
-                <string>vmess</string>
-                <string>ss</string>
-                <string>ssr</string>
-            </array>
-        </dict>
-    </array>
-    <key>SUFeedURL</key>
-    <string>https://gitee.com/yanue/appcast/raw/master/appcast.xml</string>
+	<key>SUFeedURL</key>
+	<string>https://gitee.com/yanue/appcast/raw/master/appcast.xml</string>
+	<key>SUPublicEDKey</key>
+	<string>PW8pDnr5VZkmC93gZjUDlHI8gkJSspPoDU3DdhsMkps</string>
 </dict>
 </plist>
