--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
-xcuserdata
-.DS_Store
+*.xcuserstate  
+project.xcworkspace  
+xcuserdata  
+UserInterfaceState.xcuserstate  
+project.xcworkspace/  
+xcuserdata/  
+UserInterface.xcuserstate
