--- a/V2rayU/GoogleService-Info.plist
+++ b/V2rayU/GoogleService-Info.plist
@@ -15,15 +15,15 @@
 	<key>STORAGE_BUCKET</key>
 	<string>v2rayu-61f76.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_ANALYTICS_ENABLED</key>
-	<false></false>
+	<true/>
 	<key>IS_APPINVITE_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_GCM_ENABLED</key>
-	<true></true>
+	<false/>
 	<key>IS_SIGNIN_ENABLED</key>
-	<true></true>
+	<false/>
 	<key>GOOGLE_APP_ID</key>
 	<string>1:114354938670:ios:a2ee8062d103d95aad50bf</string>
 </dict>
