--- a/V2rayU/Info.plist
+++ b/V2rayU/Info.plist
@@ -2,8 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>CFBundleGetInfoString</key>
-	<string></string>
+	<key>LSUIElement</key>
+	<true/>
 	<key>CFBundleIconFile</key>
 	<string>AppIcon</string>
 	<key>CFBundleURLTypes</key>
@@ -18,6 +18,8 @@
 				<string>vmess</string>
 				<string>ss</string>
 				<string>ssr</string>
+				<string>trojan</string>
+				<string>vless</string>
 			</array>
 		</dict>
 	</array>
@@ -36,7 +38,7 @@
 				<string>public.data</string>
 			</array>
 			<key>UTTypeDescription</key>
-			<string>Dragable</string>
+			<string>dragable</string>
 			<key>UTTypeIcons</key>
 			<dict/>
 			<key>UTTypeIdentifier</key>
