--- a/V2rayU/GoogleService-Info.plist
+++ b/V2rayU/GoogleService-Info.plist
@@ -13,7 +13,7 @@
 	<key>PROJECT_ID</key>
 	<string>v2rayu-61f76</string>
 	<key>STORAGE_BUCKET</key>
-	<string>v2rayu-61f76.appspot.com</string>
+	<string>v2rayu-61f76.firebasestorage.app</string>
 	<key>IS_ADS_ENABLED</key>
 	<false/>
 	<key>IS_ANALYTICS_ENABLED</key>
